array.island.Island.scala.error
Erreur de compilation :
Island:7: error: '(' expected but identifier found.
   while  num(0)==num(i){
          ^