array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  
  var x:Int
  var i:Int
  
   while  num(0)==num(i){
     i=i+1
   }
  x=x+1
  island(num:i)


}